[project]
name = "edgescope"
version = "0.1.0"
description = ""
authors = [{ name = "Katze719", email = "pauldorn1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyqt5 (>=5.15.11,<6.0.0)", "opencv-python (>=4.11.0.86,<5.0.0.0)", "numpy (>=2.2.4,<3.0.0)", "pytesseract (>=0.3.13,<0.4.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
